--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>To Do App</title>
+    <!-- styles -->
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
+    <!-- javascript -->
+    <script src="main.js" type="text/javascript"></script>
+</head>
+
+<body>
+    <div id="container">
+        <header>
+            <h1>My To Do Lists</h1>
+            <nav>
+                <a href="index.html">main</a> -
+                <a href="index.html">settings</a>
+            </nav>
+        </header>
+
+        <div id="todo-lists">
+            <div class="list">
+                <a href="list.html">Groceries</a>
+            </div>
+
+            <div class="list">
+                <a href="list.html">Homework</a>
+            </div>
+
+            <div class="list">
+                <a href="list.html">Random Errands</a>
+            </div>
+            
+            <label for="text_input">Text Input:</label>
+            <input type ="text"></input>
+            <button onclick="addNewList()">Add New List</button>
+        </div>
+
+        </div>
+    </div>
+</body>
+
+</html>
