--- a/week7_lab/index.html
+++ b/week7_lab/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>To Do App</title>
+    <title>Zookeeping Application</title>
     <!-- styles -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <!-- fonts -->
@@ -10,36 +10,8 @@
     <script src="main.js" type="text/javascript"></script>
 </head>
 
-<body>
-    <div id="container">
-        <header>
-            <h1>My To Do Lists</h1>
-            <nav>
-                <a href="index.html">main</a> -
-                <a href="index.html">settings</a>
-            </nav>
-        </header>
-
-        <div id="todo-lists">
-            <div class="list">
-                <a href="list.html">Groceries</a>
-            </div>
-
-            <div class="list">
-                <a href="list.html">Homework</a>
-            </div>
-
-            <div class="list">
-                <a href="list.html">Random Errands</a>
-            </div>
-            
-            <label for="text_input">Text Input:</label>
-            <input type ="text"></input>
-            <button onclick="addNewList()">Add New List</button>
-        </div>
-
-        </div>
-    </div>
+<body onload="onLoad()">
+    <img id="animal-img" src="" alt="">
 </body>
 
 </html>
